--- a/src/app/components/auth/login/login.component.html
+++ b/src/app/components/auth/login/login.component.html
@@ -1,4 +1,7 @@
-<div class="container">
+<div class="container loginContainer">
+    <div class="title">
+        <p>WELCOME TO MARÍA RESTAURANT</p>
+    </div>
     <div class="login">
             <i class="bi bi-person-badge"id="icon"></i>
             <br>
