--- a/src/app/components/Menu/menu/menu.component.html
+++ b/src/app/components/Menu/menu/menu.component.html
@@ -1,4 +1,4 @@
-<div class="col-2" style="float:left">
+<div class="col" style="float:left">
     <app-categories></app-categories>
 </div>
 <div class="col-12">
