Unit tests friday 08/07/2022

--- a/src/app/components/Menu/menu/menu.component.html
+++ b/src/app/components/Menu/menu/menu.component.html
@@ -3,7 +3,7 @@
 </div>
 <div class="col-12">
     <div class="categories">
-        <div class="menuTitle">
+        <div class="menuTitle" ngIf="categorySelected">
             <p>{{categorySelected[0].category_name}}</p>
         </div>
         <hr>
